# bootstrapping

./: .gitignore  pyproject.toml
bs/: bootstrapping.py  filenames.py  snakemake_wrapper.py  test.py  utils.py
bs/legacy_code/: bootsnake.py  bootstrapping.py  watersnake.py
snakemake/: Bootstrapping.smk  Testing.ipynb  config_bootstrapping.yaml
