[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-bootstrapping"
version = "0.0.1"
authors = [
  { name="joandrews33", email="joandrews33@gmail.com" },
]
description = "A package for bootstrapping ops data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules=['bs']

[project.urls]
Homepage = "https://github.com/pypa/bootstrapping"
